--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -15,6 +15,16 @@ body {
 
 }
 
+
+
+main {
+  min-width: 320px;
+}
+
+footer {
+  min-width: 320px;
+}
+
 .container {
   width: 320px;
   padding: 0 15px;
@@ -51,6 +61,7 @@ ul {
 .bg-1 {
   position: absolute; 
   width: 100%;
+  min-width: 320px;
   z-index: -1;
   @media (min-width: $tablet) {
     display: none;
