--- a/src/sass/components/_about-us.scss
+++ b/src/sass/components/_about-us.scss
@@ -9,31 +9,16 @@
 }
 
 .about-us__title {
-  display: contents;
   font-family: Caveat Brush;
   font-style: normal;
   font-weight: normal;
-  font-size: 36px;
+  font-size: 24px;
   line-height: 1.81;
   text-align: center;
   color: $text;
   margin-bottom: 10px;
-
-  @media screen and (min-width: $tablet) and (max-width: $pc) {
-    font-size: 24px;
-    line-height: 2.71;
-    font-family: Caveat Brush;
-    font-style: normal;
-    font-weight: normal;
-  }
-
-  @media screen and (max-width: 767.99px) {
-    font-family: Caveat Brush;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
-    line-height: 2.71;
-    text-align: center;
+  @media (min-width: $pc) {
+    font-size: 36px;
   }
 }
 
