--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,11 +1,6 @@
 .header {
-    background-image: url(/images/bg1-mobile.svg);
-    background-repeat: no-repeat;
-    background-size: 100%;
     height: 100%;
-    @media (min-width: $tablet) {
-        background-image: url(/images/bg-1.svg);
-    }
+    min-width: 320px;
 }
 
 .page-nav__section {
