--- a/src/sass/components/_program.scss
+++ b/src/sass/components/_program.scss
@@ -45,6 +45,7 @@ color: #AB816C;
 font-family: Caveat Brush;
 font-size: 24px;
 line-height: 2.7;
+font-weight: normal;
 color: #2E2520;
 margin: 0px;
 padding: 0px;
