--- a/src/sass/components/_contact-form.scss
+++ b/src/sass/components/_contact-form.scss
@@ -109,6 +109,8 @@
   @media screen and (min-width: $pc) {
     font-size: 24px;
     line-height: 2.7;
+    width: 158px;
+    height: 50px;
     &:hover,
     &:focus {
       background-color: $hover;
