Добавляет изображения в секцию Program

--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -24,9 +24,11 @@
         <div class="container-program__item">
         <ul class="program-details__list">
             <li class="program-details__item">
-                <picture class="program-details__img">
-                    <source srcset="./images/donut-1.png 1x, ./images/donut-1@2x.png  2x" media="(min-width: 320px)"/>
-                    <img src="./images/donut-1.png" alt="пончик" width="76.52">
+                <picture class="program-details__img donut-first">
+                    <source srcset="./images/program/desktop/donut-1_desktop.png 1x, ./images/program/desktop/donut-1@2x_desktop.png 2x" media="(min-width: 1280px)" />
+                    <source srcset="./images/program/tablet/donut-1_tablet.png 1x, ./images/program/tablet/donut-1@2x_tablet.png 2x" media="(min-width: 768px)" />
+                    <source srcset="./images/program/mobile/donut-1_mobile.png 1x, ./images/program/mobile/donut-1@2x_mobile.png 2x" media="(max-width: 767px)" />
+                    <img src="./images/program/desktop/donut-1_desktop.png" alt="пончик" width="97">
                 </picture>
                 <span class="program-details__title">Type of the event</span>
                 <p class="program-details__text">Cooking classes</p>
@@ -36,10 +38,11 @@
            
            </li>
             <li class="program-details__item">
-                <picture class="program-details__img">
-                    <source srcset="./images/donut-2.png 1x, ./images/donut-2@2x.png  2x" media="(min-width: 320px)"/>
-                    <img src="./images/donut-2.png" alt="пончик" width="
-                    64.86">
+                <picture class="program-details__img donut-second">
+                    <source srcset="./images/program/desktop/donut-2_desktop.png 1x, ./images/program/desktop/donut-2@2x_desktop.png 2x" media="(min-width: 1280px)" />
+                    <source  srcset="./images/program/tablet/donut-2_tablet.png 1x, ./images/program/tablet/donut-2@2x_tablet.png 2x" media="(min-width: 768px)" />
+                    <source  srcset="./images/program/mobile/donut-2_mobile.png 1x, ./images/program/mobile/donut-2@2x_mobile.png 2x" media="(max-width: 767px)"/>
+                    <img src="./images/program/desktop/donut-2_desktop.png" alt="пончик" width="83">
                 </picture>
                 <span class="program-details__title">Number of guests</span>
                 <p class="program-details__text">1 to 20</p>
@@ -48,9 +51,11 @@
                 </svg>
            </li>
             <li class="program-details__item">
-                <picture class="program-details__img">
-                    <source srcset="./images/donut-3.png 1x, ./images/donut-3@2x.png  2x" media="(min-width: 320px)"/>
-                    <img src="./images/donut-3.png" alt="пончик" width="69.42">
+                <picture class="program-details__img donut-third">
+                    <source srcset="./images/program/desktop/donut-3_desktop.png 1x, ./images/program/desktop/donut-3@2x_desktop.png 2x" media="(min-width: 1280px)"/>
+                    <source srcset="./images/program/tablet/donut-3_tablet.png 1x, ./images/program/tablet/donut-3@2x_tablet.png 2x" media="(min-width: 768px)"/>
+                    <source srcset="./images/program/mobile/donut-3_mobile.png 1x, ./images/program/mobile/donut-3@2x_mobile.png 2x" media="(max-width: 767px)"/>
+                    <img src="./images/program/desktop/donut-3_desktop.png" alt="пончик" width="88">
                 </picture>
                 <span class="program-details__title">Time of the event</span>
                 <p class="program-details__text">18:30 (2.5 hours)</p>
@@ -59,9 +64,11 @@
                 </svg>
             </li>
             <li class="program-details__item">
-                <picture class="program-details__img">
-                    <source srcset="./images/donut-4.png 1x, ./images/donut-4@2x.png  2x" media="(min-width: 320px)"/>
-                    <img src="./images/donut-4.png" alt="пончик" width="65.48">
+                <picture class="program-details__img donut-fourth">
+                    <source srcset="./images/program/desktop/donut-4_desktop.png 1x, ./images/program/desktop/donut-4@2x_desktop.png 2x" media="(min-width: 1280px)"/>
+                    <source srcset="./images/program/tablet/donut-4_tablet.png 1x, ./images/program/tablet/donut-4@2x_tablet.png 2x" media="(min-width: 768px)"/>
+                    <source srcset="./images/program/mobile/donut-4_mobile.png 1x, ./images/program/mobile/donut-4@2x_mobile.png 2x" media="(max-width: 767px)"/>
+                    <img src="./images/program/desktop/donut-4_desktop.png" alt="пончик" width="83">
                 </picture>
                 <span class="program-details__title">The host speaks</span>
                 <p class="program-details__text">English, French</p>
