--- a/src/sass/components/_program.scss
+++ b/src/sass/components/_program.scss
@@ -252,6 +252,7 @@ padding-top: 63px;
 
 .program-details__img{
     position: absolute;
+    // width: 76.52px;
     transform: translate(-50%, -100%);
 
     @media screen and (min-width:$pc){
@@ -259,6 +260,31 @@ padding-top: 63px;
     }
 }
 
+.donut-first{
+    width:76.52px;
+    @media screen and (min-width:$pc){
+        width:97px;
+    }
+}
+
+.donut-second{
+    width:64.86px;
+    @media screen and (min-width:$pc){
+        width:83px;
+    }
+}
+.donut-third{
+    width:69.42px;
+    @media screen and (min-width:$pc){
+        width:88px;
+    }
+}
+.donut-fourth{
+    width:65.48px;
+    @media screen and (min-width:$pc){
+        width:83px;
+    }
+}
 .program__text--hidden{
     display: none;
     @media screen and (min-width:$pc){
