--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,6 +1,11 @@
 <section class="about-us">
-  <span class="about-us__img"></span>
-  <div class="about-us__wrapper">
+  <div class="container">
+    <div class="about_us-container">
+  <img 
+  srcset="./images/pic.png 1x, ./images/pic@2x.png 2x"
+  src="./images/pic.png" alt="pic"
+  class="about_us-pic">
+  <div class="text-wrapper">
     <h2 class="about-us__title">About us</h2>
     <div class="about-us__text">
       <p>
@@ -18,5 +23,7 @@
       </p>
     </div>
     <button class="about-us__button">Read more</button>
-  </div>
+    </div>
+    </div>
+    </div>
 </section>
