--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,8 @@
 <img src="./images/bg1-mobile.svg" alt="bg" class="bg-1">
+<img src="./images/bg-1.svg" alt="bg-tablet" class="bg-1-tablet">
+<img 
+srcset="./images/spoon-1.png 1x, ./images/spoon-1@2x.png 2x"
+src="./images/spoon-1.png" alt="spoon" class="spoon">
         <nav class="container page-nav__section">
             <div class="page-nav--position">
                 <div class="page-nav__wrap">
