--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -9,6 +9,9 @@ body {
   background-color: $white;
   color: $text;
   font-family: Montserrat;
+  &.modal-open {
+    overflow: hidden;
+  }
    @media screen and (min-width: $pc) {
     overflow-x: hidden;
   }
@@ -65,5 +68,16 @@ ul {
   z-index: -1;
   @media (min-width: $tablet) {
     display: none;
+  }
+}
+
+.bg-1-tablet {
+  position: absolute; 
+  width: 100%;
+  min-width: 320px;
+  z-index: -1;
+  display: none;
+  @media (min-width: $tablet) {
+    display: block;
   }
 }
