--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -10,16 +10,9 @@
     width: 100%;
   }
 }
-@media screen and (min-width: $tablet) and (max-width: 1279px) {
+@media (min-width: $tablet) {
   .hero {
-    width: 100%;
-    height: 796px;
-  }
-}
-@media screen and (min-width: $pc) {
-  .hero {
-    width: 100%;
-    height: 796px;
+    margin-bottom: 56px;
   }
 }
 
@@ -167,7 +160,7 @@
     justify-content: flex-start;
   }
   @media screen and (min-width: $pc) {
-    margin-top: 57px;
+    margin-top: 50px;
   }
 }
 .social__item {
