--- a/src/sass/components/_about-us.scss
+++ b/src/sass/components/_about-us.scss
@@ -1,11 +1,5 @@
 .about-us {
-  @media screen and (min-width: $tablet) {
-    display: flex;
-  }
-
-  @media screen and (max-width: 767.99px) {
-    margin-bottom: 42px;
-  }
+  margin-bottom: 40px;
 }
 
 .about-us__title {
@@ -17,8 +11,12 @@
   text-align: center;
   color: $text;
   margin-bottom: 10px;
+  @media (min-width: $tablet) {
+    text-align: left;
+  }
   @media (min-width: $pc) {
     font-size: 36px;
+    text-align: left;
   }
 }
 
@@ -59,66 +57,6 @@
   }
 }
 
-.about-us__wrapper {
-  @media screen and (max-width: 767.99px) {
-    margin-left: 15px;
-    margin-right: 15px;
-  }
-
-  @media screen and (min-width: $tablet) {
-    margin-left: 24.35px;
-  }
-
-  @media screen and (min-width: 1279.99px) {
-    margin-left: 76px;
-  }
-}
-
-.about-us__img {
-  background-image: url('../images/pic.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-  width: 512px;
-  height: 546.71px;
-  z-index: 1;
-  margin-left: 71px;
-  transform: translate(2%, -8%);
-
-  @media screen and (min-width: $tablet) and (max-width: $pc) {
-    width: 329.65px;
-    height: 352px;
-  }
-
-  @media screen and (max-width: 767.99 px) {
-    width: 290px;
-    height: 309.66px;
-  }
-
-  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-    background-image: url('../images/pic@2x.png');
-  }
-}
-
-@media screen and (min-width: $tablet) and (max-width: $pc) {
-  .about-us__img {
-    background-image: url('../images/pic.png');
-
-    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-      background-image: url('../images/pic@2x.png');
-    }
-  }
-}
-
-@media screen and (min-width: $pc) {
-  .about-us__img {
-    background-image: url('../images/pic.png');
-
-    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-      background-image: url('../images/pic@2x.png');
-    }
-  }
-}
-
 .about-us__button {
   @media screen and (min-width: $pc) {
     display: none;
@@ -135,5 +73,35 @@
     background-color: transparent;
     border: none;
     color: #ab816c;
+  }
+}
+
+.about_us-container {
+  @media (min-width: $tablet) {
+    display: flex;
+  }
+}
+
+.about_us-pic {
+  display: none;
+  @media (min-width: $tablet) {
+    display: block;
+    width: 330px;
+    height: 352px;
+    margin-left: -65px;
+  }
+  @media (min-width: $pc) {
+    width: 512px;
+    height: 546px;
+    margin-left: -155px;
+  }
+}
+
+.text-wrapper {
+  @media (min-width: $tablet) {
+    margin-left: 25px;
+  }
+  @media (min-width: $pc) {
+    margin-left: 76px;
   }
 }
