--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,4 +1,4 @@
-<section class="about-us">
+<section class="about-us" id="about-us">
   <div class="container">
     <div class="about_us-container">
   <img 
