--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -44,27 +44,10 @@
   margin-bottom: 34px;
 }
 
-.social-icons__item:not(:last-child) {
-  margin-right: 9.47px;
-
-  @media screen and (min-width: $pc) {
-    margin-right: 12px;
-  }
-}
-
-.social-icons__svg:hover,
-.social-icons__svg:focus {
-  stroke: #2196f3;
-}
-
 .footer-contacts {
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
-
-.footer-contacts__icon {
-  margin-right: 3px;
 }
 
 .footer-contacts__link {
@@ -74,11 +57,6 @@
   line-height: 1.25;
   text-align: center;
   color: $text;
-}
-
-.footer-contacts__icon:hover,
-.footer-contacts__icon:focus {
-  stroke: #2196f3;
 }
 
 .footer-contacts__item {
@@ -126,5 +104,12 @@
 .container-footer {
   @media (min-width: $pc) {
     position: relative;
+  }
+}
+
+.footer-social:not(:last-child) {
+  margin-right: 9.5px;
+  @media (min-width: $pc) {
+    margin-right: 12px;
   }
 }
