--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -1,4 +1,4 @@
-<section class="program">
+<section class="program" id="program">
     <div class="container">
 <div class="container-program">
    <div class="container-program__item">
