--- a/src/sass/components/_contact-form.scss
+++ b/src/sass/components/_contact-form.scss
@@ -48,7 +48,7 @@
   font-style: normal;
   font-size: 16px;
   line-height: 1.25;
-  color: rgba(171, 129, 108, 0.5);
+  color: rgb(171, 129, 108);
 
   @media screen and (min-width: $tablet) and (max-width: $pc) {
     width: 410px;
@@ -57,6 +57,10 @@
   @media screen and (min-width: $pc) {
     width: 430px;
   }
+}
+
+.contact__field::placeholder {
+  color: rgba(171, 129, 108, 0.5);
 }
 
 .contact__field--question {
@@ -89,6 +93,8 @@
   width: 145px;
   height: 40px;
 
+  cursor: pointer;
+
   font-family: Caveat Brush;
   font-style: normal;
   font-weight: normal;
@@ -119,6 +125,5 @@
 }
 
 .contact__field:invalid {
-  background-color: rgba(255, 0, 0, 0.5);
-  border-bottom: 1px solid rgb (255, 0, 0);
+  border-bottom: 1px solid rgb(255, 0, 0);
 }
