--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -88,6 +88,9 @@
 
   color: $text;
 
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
   &:hover,
   &:focus {
     color: $hover;
