--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -133,7 +133,6 @@
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
-    color: $milk;
     background-color: $hover;
   }
   @media screen and (min-width: $tablet) {
@@ -142,6 +141,7 @@
   }
   @media screen and (min-width: $pc) {
     width: 158px;
+    height: 45px;
     font-size: 24px;
     margin-top: 30px;
   }
@@ -177,8 +177,8 @@
   height: 25px;
 
   border-radius: 50%;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   fill: $text;
   &:hover,
   &:focus {
