Everything (almost) fixed

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -15,7 +15,7 @@
         <h2 class="hero__subtitle">Hosted by Eva Green</h2>
 
 
-    <a href="#" class="button__register">Register</a>
+    <a href="#register" class="button__register">Register</a>
 
         <ul class="socials">
 
