--- a/src/sass/components/_registration.scss
+++ b/src/sass/components/_registration.scss
@@ -1,25 +1,3 @@
-/* Hidden titles */
-.visually-hidden {
-  position: absolute !important;
-  clip: rect(1px 1px 1px 1px);
-  clip: rect(1px, 1px, 1px, 1px);
-  padding: 0 !important;
-  border: 0 !important;
-  height: 1px !important;
-  width: 1px !important;
-  overflow: hidden;
-}
-
-.title--registration {
-  font-size: 24px;
-  line-height: 2.71;
-
-  @media screen and (min-width: 1280px) {
-    font-size: 36px;
-    line-height: 1.81;
-  }
-}
-
 .text-style {
   font-weight: 500;
   font-size: 18px;
@@ -64,16 +42,18 @@
   }
 }
 
+.registration__input-1 {
+  margin-bottom: 25px;
+}
+.registration__input-2 {
+  margin-bottom: 37px;
+}
+
 .registration {
-  padding-top: 15px;
+  width: 100%;
+  margin-bottom: 74px;
 
   @media screen and (max-width: 767.98px) {
-    width: 100%;
-    max-width: 320px;
-    height: 510px;
-
-    margin: 0 auto;
-
     padding-left: 13px;
     padding-right: 12px;
 
@@ -195,16 +175,18 @@
 .registration__form {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
   @media screen and (max-width: 767.98px) {
     &::before {
       content: '';
       display: block;
 
-      width: 100%;
+      width: 265px;
       height: 1px;
 
-      background-color: var(--registration-input-color);
+      background-color: rgba(171, 129, 108, 0.5);;
       margin-bottom: 13px;
     }
   }
@@ -212,6 +194,10 @@
   @media screen and (min-width: 768px) {
     flex-grow: 1;
   }
+}
+
+.apply {
+  line-height: 1.2;
 }
 
 .registration-form__input-field {
