--- a/src/partials/registration.html
+++ b/src/partials/registration.html
@@ -1,44 +1,16 @@
-<section id="register">
-  <h2 class="visually-hidden">Registration section</h2>
-  <div class="container container--registration">
-    <div class="registration">
-      <div class="registration__bg-cake"></div>
-      <p class="registration__head title title--registration">Registration</p>
-      <div class="registration__main-section">
-        <div class="registration__date-place-price">
-          <div class="registration__date text-style">May 23, 11:00</div>
-          <div class="registration__place text-style">New York</div>
-          <p class="registration__price text-style">$699</p>
-        </div>
+<section class="registration" id="register">
+  <div class="container">
 
-        <form name="registration-form" class="registration__form" autocomplete="on">
-          <p class="registration-form__appeal">Apply your personal info for registration</p>
-          <input
-            type="text"
-            name="name-input"
-            placeholder="Your name"
-            pattern="^[A-Za-zА-Яа-яЁё\s]+$"
-            required
-            class="registration-form__input-field"
-          />
-          <input
-            type="tel"
-            name="phone-input"
-            placeholder="Phone number"
-            pattern="[0-9]{12}"
-            required
-            class="registration-form__input-field"
-          />
-          <input
-            type="email"
-            name="mail-input"
-            placeholder="Email"
-            class="registration-form__input-field"
-          />
-          <button class="button-style button--style" type="submit">Register</button>
-        </form>
+    <h2 class="contact__title">Registration</h2>
+    <p class="registration__date">May 23, 11:00 <br> New York</p>
+    <p class="registration__price">$ 699</p>
+
+        <form class="registration__form">
+          <p class="apply">Apply your personal info <br> for registration</p>
+          <input type="text" name="name" class="contact__field registration__input-1" placeholder="Your name">
+          <input type="tel" name="phone" class="contact__field registration__input-1" placeholder="Phone number" />
+          <input type="email" name="mail" class="contact__field registration__input-2" placeholder="Email"
+            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" />
+          <button class="contact__btn">Register</button>
       </div>
-      <div class="registration__bg-gold"></div>
-    </div>
-  </div>
 </section>
