--- a/src/sass/components/_about-us.scss
+++ b/src/sass/components/_about-us.scss
@@ -58,6 +58,13 @@
 }
 
 .about-us__button {
+  cursor: pointer;
+
+  &:hover,
+  &:focus {
+    color: $hover;
+  }
+
   @media screen and (min-width: $pc) {
     display: none;
   }
