Добавляет скрипт и эффект ховера,фокуса на кнопку Read More

--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -13,12 +13,16 @@
            <li class="program__item"> <p class="program__item-text">Secret receipt of cooking from Eva</p></li>
            <li class="program__item"> <p class="program__item-text">All products are included in the price</p></li>
         </ul>
-        <p class="program__text--hidden" >Come with your dear people and friends
+        <p class="program__text--hidden">Come with your dear people and friends and you will spend an unforgettable time and will become a real professional in donuts cooking! </p>
+
+        
+        <span id="dots"></span><span id="more"><p>Come with your dear people and friends
         and you will spend an unforgettable time and
          will become a real professional
-        in donuts cooking! </p>
+        in donuts cooking! </p></span>
         
-        <button class="button">Read more</button>
+        <button  class="button" onclick="myFunction()" id="myBtn">Read more</button>
+       
     </div>
 
         <div class="container-program__item">
