--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,6 +1,6 @@
 <section class="section" id="reviews">
     <div class="container reviews-section">
-        <h2 class="section__title title">Reviews</h2>        
+        <h2 class="contact__title">Reviews</h2>        
             <ul class="list reviews-list">
                 <li class="reviews-list__item reviews-list__item--wrap">
                     <picture>
