Almost all website fixed

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,9 @@
 <img src="./images/bg1-mobile.svg" alt="bg" class="bg-1">
 <img src="./images/bg-1.svg" alt="bg-tablet" class="bg-1-tablet">
+
+    <img src="./images/bg2-mobile.png" alt="bg-2" class="bg-2">
+    <img src="./images/bg-2.png" alt="bg-2" class="bg-2-tablet">
+
 <img 
 srcset="./images/spoon-1.png 1x, ./images/spoon-1@2x.png 2x"
 src="./images/spoon-1.png" alt="spoon" class="spoon">
