--- a/src/partials/registration.html
+++ b/src/partials/registration.html
@@ -1,16 +1,28 @@
 <section class="registration" id="register">
   <div class="container">
-
+<div class="registration-container">
     <h2 class="contact__title">Registration</h2>
+
+    <div class="registration-tablet">
+
+      <div class="registration__text-box">
     <p class="registration__date">May 23, 11:00 <br> New York</p>
     <p class="registration__price">$ 699</p>
-
+    </div>
         <form class="registration__form">
+          <div class="form">
           <p class="apply">Apply your personal info <br> for registration</p>
-          <input type="text" name="name" class="contact__field registration__input-1" placeholder="Your name">
-          <input type="tel" name="phone" class="contact__field registration__input-1" placeholder="Phone number" />
-          <input type="email" name="mail" class="contact__field registration__input-2" placeholder="Email"
+
+          <input type="text" name="name" class="registration__input-1" placeholder="Your name">
+          <input type="tel" name="phone" class="registration__input-1" placeholder="Phone number" />
+          <input type="email" name="mail" class="registration__input-2" placeholder="Email"
             pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" />
-          <button class="contact__btn">Register</button>
+          </div>
+          <button class="registration__button">Register</button>
+
+          </div>
+
+      </div>
+
       </div>
 </section>
