--- a/src/sass/components/_program.scss
+++ b/src/sass/components/_program.scss
@@ -1,5 +1,8 @@
 .program {
-    margin-bottom: 68px;
+    margin-bottom: 50px;
+    @media (min-width: $tablet) {
+        margin-bottom: 20px;
+    }
 }
 
 @media screen and (min-width:$pc){
