--- a/src/sass/components/_registration.scss
+++ b/src/sass/components/_registration.scss
@@ -1,3 +1,102 @@
+.registration-container {
+  background: #fffff9;
+  box-shadow: -4px -4px 4px rgba(171, 129, 108, 0.15), 4px 4px 4px rgba(171, 129, 108, 0.15);
+  border-radius: 150px 150px 0px 0px;
+  padding-top: 30px;
+  padding-bottom: 50px;
+  position: relative;
+  @media (min-width: $tablet) {
+    background: transparent;
+    box-shadow: none;
+    border-radius: none;
+    padding: 0;
+    margin-top: 100px;
+  }
+}
+
+.registration-tablet {
+  @media (min-width: $tablet) {
+    display: flex;
+    background: #fffff9;
+    box-shadow: -4px -4px 4px rgba(171, 129, 108, 0.15), 4px 4px 4px rgba(171, 129, 108, 0.15);
+    border-radius: 150px;
+    width: 634px;
+    height: 260px;
+  }
+  @media (min-width: $pc) {
+    width: 822px;
+  }
+}
+
+.form {
+  @media (min-width: $tablet) {
+    width: 234px;
+  }
+}
+
+.registration__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  border: inherit;
+  border-radius: 25px;
+  width: 145px;
+  height: 40px;
+  cursor: pointer;
+  font-family: Caveat Brush;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 3.61;
+  color: #fff;
+  text-align: center;
+  background-color: #ab816c;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @media (min-width: $tablet) {
+    margin: 0;
+    margin-left: 25px;
+  }
+  @media (min-width: $pc) {
+    width: 158px;
+    height: 45px;
+    margin-left: 60px;
+  }
+}
+
+.registration__text-box {
+  @media (min-width: $tablet) {
+    margin-right: 30px;
+    margin-left: 40px;
+    margin-top: 54px;
+  }
+  @media (min-width: $pc) {
+    margin-left: 110px;
+  }
+
+  &::after {
+    display: none;
+    content: '';
+    width: 1px;
+    height: 190px;
+    background-color: rgba(171, 129, 108, 0.5);
+
+    position: absolute;
+    left: 170px;
+    top: 80px;
+
+    @media (min-width: $tablet) {
+      display: block;
+    }
+    @media (min-width: $pc) {
+      left: 260px;
+      top: 100px;
+  }
+  }
+}
+
 .text-style {
   font-weight: 500;
   font-size: 18px;
@@ -44,9 +143,37 @@
 
 .registration__input-1 {
   margin-bottom: 25px;
+  border-bottom: 1px solid $button;
+  border-left: none;
+  border-right: none;
+  border-top: none;
+  width: 265px;
+
+  font-family: Montserrat;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 1.25;
+  color: rgb(171, 129, 108);
+  @media (min-width: $tablet) {
+    width: 234px;
+  }
 }
 .registration__input-2 {
   margin-bottom: 37px;
+  border-bottom: 1px solid $button;
+  border-left: none;
+  border-right: none;
+  border-top: none;
+  width: 265px;
+
+  font-family: Montserrat;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 1.25;
+  color: rgb(171, 129, 108);
+  @media (min-width: $tablet) {
+    width: 234px;
+  }
 }
 
 .registration {
@@ -131,6 +258,12 @@
   }
 }
 
+.registration__date {
+  @media (min-width: $tablet) {
+    text-align: right;
+  }
+}
+
 .registration__date-place-price {
   @media screen and (max-width: 767.98px) {
     margin-bottom: 20px;
@@ -146,6 +279,7 @@
 .registration__place {
   @media screen and (min-width: 768px) {
     text-align: right;
+    margin-top: 34px;
   }
 }
 
@@ -186,13 +320,15 @@
       width: 265px;
       height: 1px;
 
-      background-color: rgba(171, 129, 108, 0.5);;
+      background-color: rgba(171, 129, 108, 0.5);
       margin-bottom: 13px;
     }
   }
 
   @media screen and (min-width: 768px) {
     flex-grow: 1;
+    flex-direction: row;
+    margin-left: 30px;
   }
 }
 
