Добавляет бублик в registration

--- a/src/sass/components/_registration.scss
+++ b/src/sass/components/_registration.scss
@@ -1,4 +1,5 @@
 .registration-container {
+  position: relative;
   background: #fffff9;
   box-shadow: -4px -4px 4px rgba(171, 129, 108, 0.15), 4px 4px 4px rgba(171, 129, 108, 0.15);
   border-radius: 150px 150px 0px 0px;
@@ -93,7 +94,7 @@
     @media (min-width: $pc) {
       left: 260px;
       top: 100px;
-  }
+    }
   }
 }
 
@@ -418,5 +419,28 @@
     width: 540px;
     height: 604px;
     transform: rotate(397grad);
+  }
+}
+
+.registration__thum1 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateX(-40%);
+  z-index: -1;
+  @media screen and (max-width: $tablet) {
+    display: none;
+  }
+}
+
+.registration__thum2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translate(80%, -1%);
+  z-index: -1;
+  overflow: hidden;
+  @media screen and (max-width: $tablet) {
+    display: none;
   }
 }
