--- a/src/partials/registration.html
+++ b/src/partials/registration.html
@@ -1,6 +1,7 @@
 <section class="registration" id="register">
   <div class="container">
 <div class="registration-container">
+  
     <h2 class="contact__title">Registration</h2>
 
     <div class="registration-tablet">
@@ -21,6 +22,14 @@
           <button class="registration__button">Register</button>
 
           </div>
+
+          <div class="registration__thum1">
+            <img srcset="./images/donut-bitten.png 1x, ./images/donut-bitten@2x.png 2x" src="./images/donut-bitten.png" alt="donut-bitten">
+          </div>
+
+          <!-- <div class="registration__thum2">
+            <img srcset="./images/confetti.png 1x, ./images/confetti@2x.png 2x" src="./images/confetti.png" alt="confetti">
+          </div>  -->
 
       </div>
 
