mobile menu animation

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -37,23 +37,26 @@ src="./images/spoon-1.png" alt="spoon" class="spoon">
                 </button>
             </div>
 
-            <div class="mobile-menu" id="mobile-menu" data-menu>
 
-                <a href="./index.html" class="logo--mobile" lang="en">
-                    <svg class="logo__icon--mobile">
-                        <use href="./images/symbol-defs.svg#icon-logo"></use>
-                    </svg>
-                </a> 
+            
+                <div class="mobile-menu" id="mobile-menu" data-menu>
+                    <div class="menu__content">
+                        <a href="./index.html" class="logo--mobile" lang="en">
+                            <svg class="logo__icon--mobile">
+                                <use href="./images/symbol-defs.svg#icon-logo"></use>
+                            </svg>
+                        </a> 
 
-                <div class="page-nav__wrap--mobile">
-                    <ul class="page-nav--mobile">
-                        <li class="page-nav__item--mobile"><a href="#about-us" class="page-nav__link--mobile anchor-link">About us</a></li>
-                        <li class="page-nav__item--mobile"><a href="#program" class="page-nav__link--mobile anchor-link">Program</a></li>
-                        <li class="page-nav__item--mobile"><a href="#reviews" class="page-nav__link--mobile anchor-link">Reviews</a></li>
-                        <li class="page-nav__item--mobile"><a href="#contacts" class="page-nav__link--mobile anchor-link">Contacts</a></li>
-                    </ul>
-                </div>               
-                
-            </div>
+                        <div class="page-nav__wrap--mobile">
+                            <ul class="page-nav--mobile">
+                                <li class="page-nav__item--mobile"><a href="#about-us" class="page-nav__link--mobile anchor-link">About us</a></li>
+                                <li class="page-nav__item--mobile"><a href="#program" class="page-nav__link--mobile anchor-link">Program</a></li>
+                                <li class="page-nav__item--mobile"><a href="#reviews" class="page-nav__link--mobile anchor-link">Reviews</a></li>
+                                <li class="page-nav__item--mobile"><a href="#contacts" class="page-nav__link--mobile anchor-link">Contacts</a></li>
+                            </ul>
+                        </div>               
+                    </div> 
+                </div>
+            
 
         </nav>
