--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -1,5 +1,4 @@
 .mobile-menu {
-    display: none;
     position: fixed;
     top: 0;
     left: 0;
@@ -9,13 +8,15 @@
 
     padding: 25px;
     text-align: center;
+    
+    transform: translateX(100%);
+    transition: transform 0.4s ease-in-out;
 
     background-color: rgba(254, 243, 228, 0.9);
-    backdrop-filter: blur(4px);
-    
-    
+    backdrop-filter: blur(4px); 
+
     &.is-open {
-        display: block;           
+        transform: translateX(0); 
     }
 }
 
