--- a/src/partials/registration.html
+++ b/src/partials/registration.html
@@ -23,13 +23,11 @@
 
           </div>
 
-          <div class="registration__thum1">
+          <div class="registration__thumb1">
             <img srcset="./images/donut-bitten.png 1x, ./images/donut-bitten@2x.png 2x" src="./images/donut-bitten.png" alt="donut-bitten">
           </div>
 
-          <!-- <div class="registration__thum2">
-            <img srcset="./images/confetti.png 1x, ./images/confetti@2x.png 2x" src="./images/confetti.png" alt="confetti">
-          </div>  -->
+          <div class="registration__thumb2"></div> 
 
       </div>
 
