--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -37,12 +37,9 @@ src="./images/spoon-1.png" alt="spoon" class="spoon">
                 </button>
             </div>
 
-
-            
                 <div class="mobile-menu" id="mobile-menu" data-menu>
-                    <div class="menu__content">
                         <a href="./index.html" class="logo--mobile" lang="en">
-                            <svg class="logo__icon--mobile">
+                            <svg class="logo__icon logo__icon--mobile">
                                 <use href="./images/symbol-defs.svg#icon-logo"></use>
                             </svg>
                         </a> 
@@ -55,8 +52,5 @@ src="./images/spoon-1.png" alt="spoon" class="spoon">
                                 <li class="page-nav__item--mobile"><a href="#contacts" class="page-nav__link--mobile anchor-link">Contacts</a></li>
                             </ul>
                         </div>               
-                    </div> 
                 </div>
-            
-
         </nav>
