--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -32,8 +32,11 @@
   border: none;
   background-color: transparent;
 
-  &:hover {
-    fill: #876655;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    fill: $hover;
   }
 
   @media screen and (max-width: 767.98px) {
