--- a/src/sass/components/_logo.scss
+++ b/src/sass/components/_logo.scss
@@ -2,6 +2,13 @@
     width: 96px;
     height: 43px;
 
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+        fill: $hover;
+    }
+
     @media screen and (min-width: $pc) {
         width: 158px;
         height: 71px;
