--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -30,7 +30,9 @@
   margin: 0;
   padding: 0;
   border: none;
+  fill: $text;
   background-color: transparent;
+  cursor: pointer;
 
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
