--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -8,6 +8,7 @@
 
     padding: 25px;
     text-align: center;
+    overflow-y: scroll;
     
     transform: translateX(100%);
     transition: transform 0.6s ease-in-out;
