--- a/src/sass/components/_registration.scss
+++ b/src/sass/components/_registration.scss
@@ -56,6 +56,11 @@
   background-color: #ab816c;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+   &:hover,
+    &:focus {
+      background-color: $hover;
+    }
   @media (min-width: $tablet) {
     margin: 0;
     margin-left: 25px;
