--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -5,6 +5,12 @@ html {
   }
 }
 
+/**,
+*::before,
+*::after {
+  outline: 2px solid red;
+}*/
+
 body {
   background-color: $white;
   color: $text;
@@ -17,13 +23,10 @@ body {
     overflow: hidden;
   }
 
-   @media screen and (min-width: $pc) {
+  @media screen and (min-width: $pc) {
     overflow-x: hidden;
   }
-
 }
-
-
 
 main {
   min-width: 320px;
@@ -65,11 +68,9 @@ ul {
   list-style: none;
 }
 
-
 .bg-1 {
-  position: absolute; 
+  position: absolute;
   width: 100%;
-  min-width: 335px;
   z-index: -1;
   @media (min-width: $tablet) {
     display: none;
@@ -77,9 +78,8 @@ ul {
 }
 
 .bg-1-tablet {
-  position: absolute; 
+  position: absolute;
   width: 100%;
-  min-width: 320px;
   z-index: -1;
   display: none;
   @media (min-width: $tablet) {
@@ -88,9 +88,8 @@ ul {
 }
 
 .bg-2 {
-  position: absolute; 
+  position: absolute;
   width: 100%;
-  min-width: 335px;
   height: 1200px;
   z-index: -1;
   top: 2060px;
@@ -101,7 +100,7 @@ ul {
 
 .bg-2-tablet {
   display: none;
-  position: absolute; 
+  position: absolute;
   width: 100%;
   min-width: 330px;
   height: 1300px;
