--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -71,6 +71,7 @@ ul {
 .bg-1 {
   position: absolute;
   width: 100%;
+  min-width: 320px;
   z-index: -1;
   @media (min-width: $tablet) {
     display: none;
@@ -90,6 +91,7 @@ ul {
 .bg-2 {
   position: absolute;
   width: 100%;
+  min-width: 320px;
   height: 1200px;
   z-index: -1;
   top: 2060px;
