--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -71,7 +71,7 @@ ul {
 .bg-1 {
   position: absolute;
   width: 100%;
-  min-width: 320px;
+  min-width: $mobile;
   z-index: -1;
   @media (min-width: $tablet) {
     display: none;
@@ -92,7 +92,7 @@ ul {
 .bg-2 {
   position: absolute;
   width: 100%;
-  min-width: 320px;
+  min-width: $mobile;
   height: 1200px;
   z-index: -1;
   top: 2060px;
@@ -104,6 +104,7 @@ ul {
 .bg-2-tablet {
   display: none;
   position: absolute;
+  min-width: $tablet;
   width: 100%;
   min-width: $tablet;
   height: 1300px;
