--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -15,13 +15,17 @@
         </ul>
         <p class="program__text--hidden">Come with your dear people and friends and you will spend an unforgettable time and will become a real professional in donuts cooking! </p>
 
+        <p class="text"><span class="dots"> </span> <span class="moreText"> Come with your dear people and friends and you will
+                spend an unforgettable time and will become a real professional in donuts cooking!</span></p>
         
-        <span id="dots"></span><span id="more"><p>Come with your dear people and friends
+        <button class="read-more-btn">Read More</button>
+        
+        <!-- <span id="dots"></span><span id="more"><p>Come with your dear people and friends
         and you will spend an unforgettable time and
          will become a real professional
         in donuts cooking! </p></span>
         
-        <button  class="button" onclick="myFunction()" id="myBtn">Read more</button>
+        <button  class="button" onclick="myFunction()" id="myBtn">Read more</button> -->
        
     </div>
 
