--- a/src/sass/layout/_page-hero.scss
+++ b/src/sass/layout/_page-hero.scss
@@ -1,212 +1,212 @@
-.page-hero{
-    max-width: 320px;
-    height: 618px;
-    padding-top: 110px;
-    padding-bottom: 47px;
-    background-image: url('../images/hero/hero-wave-mobile.png');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size:cover;
+.page-hero {
+  max-width: 320px;
+  height: 618px;
+  padding-top: 110px;
+  padding-bottom: 47px;
+  background-image: url('../images/hero/hero-wave-mobile.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 
-    @media screen and (min-width: 768px) {
-        max-width: 768px;
-    }
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+  }
 
-    @media screen and (min-width: 1344px) {
-        max-width: 1344px;
-    }
+  @media screen and (min-width: 1344px) {
+    max-width: 1344px;
+  }
 }
 
-.hero-wrapper{
-    position: relative;
+.hero-wrapper {
+  position: relative;
 }
 
-.hero-title{
-    margin-bottom: 30px;
-    width: 100%;
+.hero-title {
+  margin-bottom: 30px;
+  width: 100%;
 
-    font-weight: 800;
-    font-size: 20px;
-    line-height: 1.35;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.35;
 
-    letter-spacing: 0.03em;
+  letter-spacing: 0.03em;
 }
 
-.hero-text{
+.hero-text {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 30px;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.571;
+  letter-spacing: 0.08em;
+
+  &-grey {
+    font-weight: 500;
+    color: var(--grey-color);
+  }
+
+  &-accent {
+    color: var(--orange-color);
+  }
+}
+
+.page-hero {
+  overflow: hidden;
+}
+
+.hero-text-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.hero-btn {
+  min-width: 260px;
+  min-height: 48px;
+
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 1.25;
+  text-align: center;
+  letter-spacing: 0.08em;
+  text-transform: uppercase;
+
+  color: var(--white-color);
+  background-color: var(--orange-color);
+  box-shadow: -5px 21px 26px rgba(0, 0, 0, 0.04);
+
+  border: none;
+
+  &-wrapper {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     margin-bottom: 30px;
-
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.571;
-    letter-spacing: 0.08em;
-
-    &-grey{
-        font-weight: 500;
-        color: var(--grey-color);
-    }
-
-    &-accent{
-        color: var(--orange-color);
-    }
-
+  }
 }
 
-.hero-text-wrapper{
-    display: flex;
-    flex-direction: column;
-}
+.hero-bg {
+  margin: 0 auto;
+  width: 208px;
+  height: 178px;
+  background-size: cover;
 
-.hero-btn{
-    min-width: 260px;
-    min-height: 48px;
-
-    font-weight: 700;
-    font-size: 12px;
-    line-height: 1.25;
-    text-align: center;
-    letter-spacing: 0.08em;
-    text-transform: uppercase;
-
-    color: var(--white-color);
-    background-color: var(--orange-color);
-    box-shadow: -5px 21px 26px rgba(0, 0, 0, 0.04);
-
-    border: none;
-
-    &-wrapper{
-        display: flex;
-        justify-content: center;
-        margin-bottom: 30px; 
-    }
-}
-
-.hero-bg{
-    margin: 0 auto;
-    width: 208px;
-    height: 178px;
-    background-size: cover;
-
-    background-image: url('../images/hero/hero-bg-mobile.png');
+  background-image: url('../images/hero/hero-bg-mobile.png');
 }
 
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 320px) and (max-width: 767px),
   screen and (min-resolution: 192dpi) and (min-width: 320px) and (max-width: 767px),
   screen and (min-resolution: 2dppx) and (min-width: 320px) and (max-width: 767px) {
   .hero-bg {
-    background-image: 
-      url('../images/hero/hero-bg-mobile@2x.png');
+    background-image: url('../images/hero/hero-bg-mobile@2x.png');
   }
 
-  .page-hero{
+  .page-hero {
     background-image: url('../images/hero/hero-wave-mobile@2x.png');
   }
 }
 
-@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px) ,
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
   screen and (min-resolution: 192dpi) and (min-width: 768px),
   screen and (min-resolution: 2dppx) and (min-width: 768px) {
   .hero-bg {
-    background-image: 
-      url('../images/hero/hero-bg-tablet@2x.png');
+    background-image: url('../images/hero/hero-bg-tablet@2x.png');
   }
 
-  .page-hero{
+  .page-hero {
     background-image: url('../images/hero/hero-wave-tablet@2x.png');
   }
 }
 
-@media screen and (min-width: 768px){
-    .page-hero{
-        height: 557px;
-        padding-top: 158px;
-        padding-bottom: 114px;
-        background-image: url('../images/hero/hero-wave-tablet.png');
-    }
+@media screen and (min-width: 768px) {
+  .page-hero {
+    height: 557px;
+    padding-top: 158px;
+    padding-bottom: 114px;
+    background-image: url('../images/hero/hero-wave-tablet.png');
+  }
 
-    .hero-title{
-        font-size: 26px;
-        line-height: 1.307;
-        width: 315px;
-    }
+  .hero-title {
+    font-size: 26px;
+    line-height: 1.307;
+    width: 315px;
+  }
 
-    .hero-text-wrapper{
-        display: flex;
-        flex-direction: column;
-    }
+  .hero-text-wrapper {
+    display: flex;
+    flex-direction: column;
+  }
 
-    .hero-btn-wrapper{
-        justify-content: left;
-    }
+  .hero-btn-wrapper {
+    justify-content: left;
+  }
 
-    .hero-bg{
-        position: absolute;
-        top: 10px;
-        left: 374px;
-        width: 390px;
-        height: 335px;
-    
-        background-image: url('../images/hero/hero-bg-tablet.png');
-    }
+  .hero-bg {
+    position: absolute;
+    top: 10px;
+    left: 374px;
+    width: 390px;
+    height: 335px;
+
+    background-image: url('../images/hero/hero-bg-tablet.png');
+  }
 }
 
-@media screen and (min-device-pixel-ratio: 2) and (min-width: 1344px) ,
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1344px),
   screen and (min-resolution: 192dpi) and (min-width: 1344px),
   screen and (min-resolution: 2dppx) and (min-width: 1344px) {
   .hero-bg {
-    background-image: 
-      url('../images/hero/hero-bg-desktop@2x.png');
-    }
+    background-image: url('../images/hero/hero-bg-desktop@2x.png');
+  }
 
-  .page-hero{
+  .page-hero {
     background-image: url('../images/hero/hero-wave-desktop@2x.png');
-   }
+  }
 }
 
-@media screen and (min-width: 1344px){
-    .page-hero{
-        padding-top: 228px;
-        padding-bottom: 114px;
-        height: 878px;
-    }
+@media screen and (min-width: 1344px) {
+  .page-hero {
+    padding-top: 228px;
+    padding-bottom: 114px;
+    height: 878px;
+  }
 
-    .hero-wrapper{
-        background-image: url('../images/hero/hero-wave-desktop.png');
-    }
+  .hero-wrapper {
+    background-image: url('../images/hero/hero-wave-desktop.png');
+  }
 
-    .hero-title{
-        font-size: 58px;
-        line-height: 1.293;
-        max-width: 642px;
-    }
+  .hero-title {
+    font-size: 58px;
+    line-height: 1.293;
+    max-width: 642px;
+  }
 
-    .hero-text{
-        font-size: 20px;
-        line-height: 1.65;
-    }
+  .hero-text {
+    font-size: 20px;
+    line-height: 1.65;
+  }
 
-    .hero-text-wrapper{
-        display: flex;
-        flex-direction: row;
-    }
+  .hero-text-wrapper {
+    display: flex;
+    flex-direction: row;
+  }
 
-    .hero-btn{
-        min-width: 354px;
-        min-height: 70px;
-    
-        font-weight: 700;
-        font-size: 14px;
-        line-height: 1.214;
-        letter-spacing: 0.14em;
-    }
+  .hero-btn {
+    min-width: 354px;
+    min-height: 70px;
 
-    .hero-bg{
-        width: 841.55px;
-        height: 718px;
-        top: -77px;
-        left: 610px;
-    
-        background-image: url('../images/hero/hero-bg-desktop.png');
-    }
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.214;
+    letter-spacing: 0.14em;
+  }
+
+  .hero-bg {
+    width: 841.55px;
+    height: 718px;
+    top: -77px;
+    left: 610px;
+
+    background-image: url('../images/hero/hero-bg-desktop.png');
+  }
 }
