--- a/src/sass/layout/_our-program.scss
+++ b/src/sass/layout/_our-program.scss
@@ -1,95 +1,94 @@
-.our-program{
-    padding-top: 50px;
-    padding-bottom: 370px;
-    background-color: var(--main-color);
+.our-program {
+  padding-top: 50px;
+  padding-bottom: 370px;
+  background-color: var(--main-color);
+}
+
+.our-program .container {
+  position: relative;
+}
+
+.our-program-title {
+  margin-bottom: 43px;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.3;
+  letter-spacing: 0.03em;
+
+  text-align: center;
+
+  color: var(--white-color);
+}
+
+.our-program-list {
+  margin-left: 105px;
+  margin-bottom: 50px;
+
+  &::before {
+    display: inline-block;
+    content: '';
+    position: absolute;
+    left: 79px;
+    top: 82px;
+    width: 1px;
+    height: 1282px;
+    background-color: var(--white-color);
+  }
+}
+
+.our-program-item {
+  position: relative;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 2;
+  letter-spacing: 0.08em;
+  text-transform: uppercase;
+
+  color: var(--white-color);
+
+  &:not(:last-child) {
+    margin-bottom: 40px;
   }
 
-.our-program .container{
-    position: relative;
+  &::before {
+    display: flex;
+    position: absolute;
+    left: -51px;
+    top: 6px;
+    content: '';
+    width: 12px;
+    height: 12px;
+
+    background-color: var(--orange-color);
+    border-radius: 50%;
+  }
 }
 
-.our-program-title{
-    margin-bottom: 43px;
-    font-weight: 800;
-    font-size: 20px;
-    line-height: 1.3;
-    letter-spacing: 0.03em;
-
-    text-align: center;
-
-    color: var(--white-color);
+.our-program-semester-list {
+  margin-top: 13px;
 }
 
-.our-program-list{
-    margin-left: 105px;
-    margin-bottom: 50px;
+.our-program-semester-item {
+  position: relative;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 1.667;
+  letter-spacing: 0.08em;
+  text-transform: none;
 
-    &::before{
-        display: inline-block;
-        content: "";
-        position: absolute;
-        left: 79px;
-        top: 82px;
-        width: 1px;
-        height: 1282px;
-        background-color: var(--white-color);
-    }
+  color: var(--orange-color);
+
+  &:not(:last-child) {
+    margin-bottom: 11px;
+  }
 }
 
-.our-program-item{
-    position: relative;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 2;
-    letter-spacing: 0.08em;
-    text-transform: uppercase;
-
-    color: var(--white-color);
-    
-    &:not(:last-child){
-        margin-bottom: 40px;
-    }
-
-    &::before{
-        display: flex;
-        position: absolute;
-        left: -51px;
-        top: 6px;
-        content: "";
-        width: 12px;
-        height: 12px;
-
-        background-color: var(--orange-color);
-        border-radius: 50%;
-    }
-}
-
-.our-program-semester-list{
-    margin-top: 13px;
-}
-
-.our-program-semester-item{
-    position: relative;
-    font-weight: 700;
-    font-size: 12px;
-    line-height: 1.667;
-    letter-spacing: 0.08em;
-    text-transform: none;
-
-    color: var(--orange-color);
-
-    &:not(:last-child){
-        margin-bottom: 11px;
-    }
-
-}
-
-.our-program-semester-text{
+.our-program-semester-text {
   margin-left: 20px;
 
-  &::before{
+  &::before {
     position: absolute;
-    content: "";
+    content: '';
     width: 13px;
     height: 1px;
     top: 9px;
@@ -98,40 +97,39 @@
   }
 }
 
-.our-program-semester-empty{
+.our-program-semester-empty {
   content: '';
   height: 20px;
   width: 1px;
 
-  &::before{
+  &::before {
     position: absolute;
-    content: "";
+    content: '';
     width: 13px;
     height: 1px;
     top: 40px;
     left: 0;
     background-color: var(--orange-color);
   }
-
 }
 
-.our-program-topic-list{
-    margin-top: 11px;
+.our-program-topic-list {
+  margin-top: 11px;
 }
 
-.our-program-topic-item{
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 1.667;
-    letter-spacing: 0.08em;
-    text-transform: none;
+.our-program-topic-item {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.667;
+  letter-spacing: 0.08em;
+  text-transform: none;
 
-    color: var(--grey-color);
+  color: var(--grey-color);
 
-    opacity: 0.5;
+  opacity: 0.5;
 }
 
-.our-program-bg{
+.our-program-bg {
   position: absolute;
   top: 1405px;
   left: 200px;
@@ -151,354 +149,352 @@
   }
 }
 
-@media screen and (min-width: 768px){
-    .our-program{
-        display: block;
-        padding-top: 60px;
-        padding-bottom: 160px;
+@media screen and (min-width: 768px) {
+  .our-program {
+    display: block;
+    padding-top: 60px;
+    padding-bottom: 160px;
+  }
+
+  .our-program-title {
+    margin-bottom: 52px;
+    font-size: 26px;
+    line-height: 1.308;
+
+    text-align: left;
+  }
+
+  .our-program-list {
+    margin-left: 144px;
+    margin-bottom: 189px;
+
+    &::before {
+      left: 88px;
+      top: 97px;
+      width: 1px;
+      height: 705px;
+    }
+  }
+
+  .our-program-item {
+    &:not(:last-child) {
+      margin-bottom: 30px;
     }
 
-    .our-program-title{
-        margin-bottom: 52px;
-        font-size: 26px;
-        line-height: 1.308;
-    
-        text-align: left;
+    &::before {
+      left: -102px;
+      top: 6px;
+    }
+  }
+
+  .our-program-semester-list {
+    display: flex;
+    margin-top: 11px;
+  }
+
+  .our-program-semester-item {
+    &.grammar {
+      width: 176px;
     }
 
-    .our-program-list{
-        margin-left: 144px;
-        margin-bottom: 189px;
-    
-        &::before{
-            left: 88px;
-            top: 97px;
-            width: 1px;
-            height: 705px;
-        }
+    &.vocabulary {
+      width: 155px;
     }
 
-        .our-program-item{
-            &:not(:last-child){
-                margin-bottom: 30px;
-            }
-        
-            &::before{
-                left: -102px;
-                top: 6px;
-            }
-        }
-
-    .our-program-semester-list{
-        display: flex;
-        margin-top: 11px;
+    &.writing {
+      width: 110px;
     }
 
-    .our-program-semester-item{
-
-        &.grammar{
-            width: 176px;
-        }
-
-        &.vocabulary{
-            width: 155px;
-        }
-
-        &.writing{
-            width: 110px;
-        }
-
-        &:not(:last-child){
-            margin-bottom: 0;
-            margin-right: 50px;
-        }
-    
+    &:not(:last-child) {
+      margin-bottom: 0;
+      margin-right: 50px;
     }
+  }
 
-    .our-program-bg{
-      top: 750px;
-      left: 383px;
-      background-image: url('../images/our-program/bg-our-program-tablet.png');
-      height: 280px;
-      width: 384px;
-    }
+  .our-program-bg {
+    top: 750px;
+    left: 383px;
+    background-image: url('../images/our-program/bg-our-program-tablet.png');
+    height: 280px;
+    width: 384px;
+  }
 }
 
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
   screen and (min-resolution: 192dpi) and (min-width: 768px),
   screen and (min-resolution: 2dppx) and (min-width: 768px) {
- .our-program-bg{
+  .our-program-bg {
     background-image: url('../images/our-program/bg-our-program-tablet@2x.png');
- }  
+  }
 }
 
-@media screen and (min-width: 1344px){
-  .our-program{
+@media screen and (min-width: 1344px) {
+  .our-program {
     padding-top: 120px;
     padding-bottom: 325px;
-}
+    overflow: hidden;
+  }
 
-  .our-program-title{
+  .our-program-title {
     margin-bottom: 160px;
-}
+  }
 
-    .our-program-list{
-        display: flex;
-        margin-left: 0;
+  .our-program-list {
+    display: flex;
+    margin-left: 0;
+    overflow: hidden;
 
-        &::before{
-          left: 0;
-          top: 140px;
-          width: 1684px;
-          height: 1px;
-      }
+    &::before {
+      overflow: hidden;
+      left: 0;
+      top: 140px;
+      width: 1684px;
+      height: 1px;
+    }
+  }
+
+  .our-program-item {
+    min-width: 240px;
+
+    &:not(:last-child) {
+      margin-right: 30px;
+      margin-bottom: 0;
     }
 
-    .our-program-item{
-        min-width: 240px;
-
-        &:not(:last-child){
-            margin-right: 30px;
-            margin-bottom: 0;
-        }
-
-        &::before{
-          left: 0;
-          top: -60px;
-      }
-
+    &::before {
+      left: 0;
+      top: -60px;
     }
+  }
 
-    .our-program-semester-list{
-      display: flex;
-      flex-direction: column;
+  .our-program-semester-list {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .our-program-semester-item {
+    display: flex;
+    flex-direction: column;
+
+    &:not(:first-child) {
+      margin-top: 25px;
     }
+  }
 
-    .our-program-semester-item{
-      display: flex;
-      flex-direction: column;
+  .our-program-topic-list {
+    margin-top: 10px;
+  }
 
-      &:not(:first-child){
-        margin-top: 25px;
-      }
-    }
-
-    .our-program-topic-list{
-      margin-top: 10px;
-    }
-
-    .our-program-bg{
-      top: 450px;
-      left: -250px;
-      background-image: url('../images/our-program/bg-our-program-desktop.png');
-      width: 760px;
-      height: 502px;
-    }
+  .our-program-bg {
+    top: 450px;
+    left: -250px;
+    background-image: url('../images/our-program/bg-our-program-desktop.png');
+    width: 760px;
+    height: 502px;
+  }
 }
 
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 1344px),
   screen and (min-resolution: 192dpi) and (min-width: 1344px),
   screen and (min-resolution: 2dppx) and (min-width: 1344px) {
- .our-program-bg{ 
+  .our-program-bg {
     background-image: url('../images/our-program/bg-our-program-desktop@2x.png');
   }
 }
 
-
 //why //
 
-.why-we-choose-title{
-    width: 180px;
-    margin-bottom: 30px;
-    font-weight: 800;
-    font-size: 20px;
-    line-height: 1.35;
-    letter-spacing: 0.03em;
+.why-we-choose-title {
+  width: 180px;
+  margin-bottom: 30px;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.35;
+  letter-spacing: 0.03em;
 
-    color: var(--white-color);
+  color: var(--white-color);
 }
 
 li {
-    list-style-type: none;
+  list-style-type: none;
+}
+
+.why-we-choose-description {
+  position: absolute;
+  width: 280px;
+  padding: 20px 22px;
+  background-color: var(--white-color);
+  //margin-bottom: 90px;
+  box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+  height: 638px;
+  margin-bottom: 39px;
+}
+
+.why-we-choose-set-item:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.why-we-choose-item.number {
+  margin-left: 27px;
+  margin-bottom: 10px;
+
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.214;
+  letter-spacing: 0.08em;
+  color: var(--orange-color);
+}
+
+.why-we-choose-item.number::before {
+  content: '';
+  display: block;
+  width: 17px;
+  height: 3px;
+  bottom: -10px;
+  left: -25px;
+  background-color: var(--orange-color);
+  border-radius: 2px;
+  position: relative;
+}
+
+.why-we-choose-item.words {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.423;
+
+  letter-spacing: 0.08em;
+}
+
+@media screen and (min-width: 768px) {
+  .why-we-choose-title {
+    min-width: 370px;
+    font-size: 26px;
+    line-height: 1.308;
+
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
   }
-  
+
   .why-we-choose-description {
-    position: absolute;
-    width: 280px;
-    padding: 20px 22px;
-    background-color: var(--white-color);
-    //margin-bottom: 90px;
-    box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
-    height: 638px;
-    margin-bottom: 39px;
+    width: 688px;
+    padding: 30px 45px 26px 96px;
+    height: 400px;
+    margin-bottom: 50px;
   }
-  
-  .why-we-choose-set-item:not(:last-child) {
-    margin-bottom: 20px;
+  .why-we-choose-set {
+    display: flex;
+    flex-wrap: wrap;
   }
-  
+
+  .why-we-choose-set-item.odd {
+    width: 236px;
+    margin-right: 22px;
+  }
+
+  .why-we-choose-set-item.even {
+    width: 287px;
+  }
+
+  .why-we-choose-item.words.second {
+    width: 225px;
+  }
+
+  .why-we-choose-item.words.fourth {
+    width: 180px;
+  }
+
+  .why-we-choose-item.words.sixth {
+    width: 225px;
+  }
+
+  .why-we-choose-set-item-list {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1344px) {
+  .why-we-choose-title {
+    display: none;
+  }
+
+  .why-we-choose-title {
+    font-size: 26px;
+    line-height: 1.308;
+
+    text-align: center;
+  }
+
+  .why-we-choose-description {
+    top: 880px;
+    width: 1314px;
+    height: 430px;
+    padding: 70px 82px 70px 84px;
+    margin-bottom: 130px;
+  }
+
   .why-we-choose-item.number {
-    margin-left: 27px;
-    margin-bottom: 10px;
-  
     font-weight: bold;
-    font-size: 14px;
-    line-height: 1.214;
+    font-size: 20px;
+    line-height: 1.65;
     letter-spacing: 0.08em;
-    color: var(--orange-color);
+    margin-bottom: 10px;
   }
-  
+
   .why-we-choose-item.number::before {
     content: '';
     display: block;
     width: 17px;
     height: 3px;
-    bottom: -10px;
+    bottom: -17px;
     left: -25px;
     background-color: var(--orange-color);
     border-radius: 2px;
     position: relative;
   }
-  
+
   .why-we-choose-item.words {
     font-weight: bold;
-    font-size: 14px;
-    line-height: 1.423;
-  
+    font-size: 20px;
+    line-height: 1.2;
     letter-spacing: 0.08em;
+    width: 356px;
   }
-  
-  @media screen and (min-width: 768px) {
-    .why-we-choose-title{
-        min-width: 370px;
-        font-size: 26px;
-        line-height: 1.308;
 
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 30px;
-    }
-
-    .why-we-choose-description {
-      width: 688px;
-      padding: 30px 45px 26px 96px;
-      height: 400px;
-      margin-bottom: 50px;
-    }
-    .why-we-choose-set {
-      display: flex;
-      flex-wrap: wrap;
-    }
-  
-    .why-we-choose-set-item.odd {
-      width: 236px;
-      margin-right: 22px;
-    }
-  
-    .why-we-choose-set-item.even {
-      width: 287px;
-    }
-  
-    .why-we-choose-item.words.second {
-      width: 225px;
-    }
-  
-    .why-we-choose-item.words.fourth {
-      width: 180px;
-    }
-  
-    .why-we-choose-item.words.sixth {
-      width: 225px;
-    }
-  
-    .why-we-choose-set-item-list {
-      margin-bottom: 30px;
-    }
+  .why-we-choose-set-item-list {
+    width: 33px;
+    margin-bottom: 32px;
   }
-  
-  @media screen and (min-width: 1344px) {
-    .why-we-choose-title{
-        display: none;
-    }
 
-    .why-we-choose-title{
-        font-size: 26px;
-        line-height: 1.308;
-
-        text-align: center;
-    }
-
-    .why-we-choose-description {
-      top: 880px;
-      width: 1314px;
-      height: 430px;
-      padding: 70px 82px 70px 84px;
-      margin-bottom: 130px;
-    }
-  
-    .why-we-choose-item.number {
-      font-weight: bold;
-      font-size: 20px;
-      line-height: 1.65;
-      letter-spacing: 0.08em;
-      margin-bottom: 10px;
-    }
-  
-    .why-we-choose-item.number::before {
-      content: '';
-      display: block;
-      width: 17px;
-      height: 3px;
-      bottom: -17px;
-      left: -25px;
-      background-color: var(--orange-color);
-      border-radius: 2px;
-      position: relative;
-    }
-  
-    .why-we-choose-item.words {
-      font-weight: bold;
-      font-size: 20px;
-      line-height: 1.2;
-      letter-spacing: 0.08em;
-      width: 356px;
-    }
-  
-    .why-we-choose-set-item-list {
-      width: 33px;
-      margin-bottom: 32px;
-    }
-  
-    .why-we-choose-set-item:nth-child(1),
-    .why-we-choose-set-item:nth-child(2),
-    .why-we-choose-set-item:nth-child(3) {
-      margin-bottom: 32px;
-    }
-  
-    .why-we-choose-set-item:nth-child(4),
-    .why-we-choose-set-item:nth-child(5) {
-      margin-bottom: 0;
-    }
-  
-    .why-we-choose-item.words.second {
-      width: 336px;
-    }
-  
-    .why-we-choose-item.words.fourth {
-      width: 336px;
-    }
-  
-    .why-we-choose-item.words.sixth {
-      width: 336px;
-    }
-  
-    .why-we-choose-set-item.odd,
-    .why-we-choose-set-item.even {
-      width: 336px;
-      margin-right: 40px;
-    }
-    .why-we-choose-set-item:nth-child(3n) {
-      margin-right: 0;
-    }
+  .why-we-choose-set-item:nth-child(1),
+  .why-we-choose-set-item:nth-child(2),
+  .why-we-choose-set-item:nth-child(3) {
+    margin-bottom: 32px;
   }
-  
+
+  .why-we-choose-set-item:nth-child(4),
+  .why-we-choose-set-item:nth-child(5) {
+    margin-bottom: 0;
+  }
+
+  .why-we-choose-item.words.second {
+    width: 336px;
+  }
+
+  .why-we-choose-item.words.fourth {
+    width: 336px;
+  }
+
+  .why-we-choose-item.words.sixth {
+    width: 336px;
+  }
+
+  .why-we-choose-set-item.odd,
+  .why-we-choose-set-item.even {
+    width: 336px;
+    margin-right: 40px;
+  }
+  .why-we-choose-set-item:nth-child(3n) {
+    margin-right: 0;
+  }
+}
