--- a/src/sass/layout/_our-program.scss
+++ b/src/sass/layout/_our-program.scss
@@ -244,7 +244,8 @@
     &::before {
       left: 0;
       top: 140px;
-      width: 1684px;
+      /*  width: 1684px; */
+      width: 1344px;
       height: 1px;
     }
   }
@@ -324,6 +325,7 @@ li {
   box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
   height: 638px;
   margin-bottom: 39px;
+  z-index: 100;
 }
 
 .why-we-choose-set-item:not(:last-child) {
