--- a/src/templates/chart.hbs
+++ b/src/templates/chart.hbs
@@ -1,3 +1,3 @@
-<p>
-    Lorem ipsum dolor sit 
-</p>
+
+<button type="button" class="hide-chart">Hide Chart</button>
+<canvas class="js-chart" width="400" height="400"></canvas>
