--- a/src/templates/moreInfo.hbs
+++ b/src/templates/moreInfo.hbs
@@ -1,9 +1,9 @@
 <!-- пример: -->
-{{!-- <p>
-    Hello
-</p> --}}
-{{#each this}}
 <p>
-    {{name}}
+    Hello
 </p>
-{{/each}} 
+
+<p>
+    {{main.temp_min}}
+</p>
+ 
