--- a/src/sass/components/_background.scss
+++ b/src/sass/components/_background.scss
@@ -1,7 +1,6 @@
 body {
-  background-image: url('../images/background1.png');
+  background-image: url('../images/background2.png');
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
-  position: fixed;
+  // background-size: cover;
 }
